--- a/trunk/AndroidManifest.xml
+++ b/trunk/AndroidManifest.xml
@@ -4,6 +4,7 @@
       android:versionCode="1"
       android:versionName="1.0">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
+        <receiver android:name=".PowerToolService" android:process=":remote" />
         <activity android:name=".PowerTool"
                   android:label="@string/app_name">
             <intent-filter>
@@ -13,4 +14,5 @@
         </activity>
     </application>
     <uses-sdk android:minSdkVersion="3" />
+    <!-- <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"></uses-permission>-->
 </manifest> 
