--- a/trunk/AndroidManifest.xml
+++ b/trunk/AndroidManifest.xml
@@ -4,7 +4,13 @@
       android:versionCode="1"
       android:versionName="1.0">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <receiver android:name=".PowerToolService" android:process=":remote" />
+        <service android:name=".AutoStartService" android:process=":remote" />
+        <receiver android:name=".PowerToolService" android:process=":remote">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>  
+                <category android:name="android.intent.category.LAUNCHER" />  
+            </intent-filter>
+        </receiver>
         <activity android:name=".PowerTool"
                   android:label="@string/app_name">
             <intent-filter>
@@ -14,5 +20,5 @@
         </activity>
     </application>
     <uses-sdk android:minSdkVersion="3" />
-    <!-- <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"></uses-permission>-->
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"></uses-permission>
 </manifest> 
