--- a/trunk/AndroidManifest.xml
+++ b/trunk/AndroidManifest.xml
@@ -19,5 +19,6 @@
         </activity>
     </application>
     <uses-sdk android:minSdkVersion="3" />
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"></uses-permission>
 </manifest> 
