--- a/trunk/AndroidManifest.xml
+++ b/trunk/AndroidManifest.xml
@@ -4,21 +4,25 @@
       android:versionCode="1"
       android:versionName="1.0">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <receiver android:name=".PowerToolService" android:process=":remote">
+    
+        <receiver android:name=".PowerToolService">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>  
-                <category android:name="android.intent.category.LAUNCHER" />  
             </intent-filter>
         </receiver>
-        <activity android:name=".PowerTool"
-                  android:label="@string/app_name">
+        
+        <activity android:name=".PowerTool" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
     </application>
+    
     <uses-sdk android:minSdkVersion="3" />
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"></uses-permission>
+
 </manifest> 
