--- a/trunk/AndroidManifest.xml
+++ b/trunk/AndroidManifest.xml
@@ -8,9 +8,18 @@
         <receiver android:name=".PoweroffReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>  
+                <action android:name="tice.poweroff.intent.action.CUSTOM_ACTION_POWEROFF"/>
             </intent-filter>
         </receiver>
         
+        <receiver android:name=".PoweroffWidgetProvider">
+            <meta-data android:name="android.appwidget.provider"
+                    android:resource="@xml/proweroffwidget_provider" />
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+        </receiver>  
+              
         <activity android:name=".Poweroff" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,6 +27,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity android:name=".PoweroffAlert" android:label="@string/app_name"
+                android:excludeFromRecents="true"
+                android:theme="@android:style/Theme.Dialog"
+                android:launchMode="singleTask"
+                android:taskAffinity=".PoweroffAlert"
+                android:screenOrientation="nosensor"
+                android:configChanges="orientation|keyboardHidden|keyboard|navigation" />
+
         
     </application>
     
